<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/account_header">

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="ac_name"
            app:title="@string/ac_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="ac_email"
            app:title="@string/ac_email"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="ac_phone"
            app:title="@string/ac_phone"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/personal_data_header">

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="cn_company"
            app:title="@string/cn_company"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="cn_position"
            app:title="@string/cn_position"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="cn_field"
            app:title="@string/cn_field"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="cn_description"
            app:title="@string/cn_description"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="cn_instagram"
            app:title="@string/cn_instagram"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="cn_linkedin"
            app:title="@string/cn_linkedin"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>