<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/loading"
        android:title="@string/item_loading"
        android:visible="false"
        app:actionLayout="@layout/action_progress_bar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:title="@string/item_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/item_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_save"
        android:title="@string/item_update"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/item_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cancel"
        android:icon="@drawable/ic_close"
        android:title="@string/item_cancel"
        app:showAsAction="ifRoom" />

</menu>