<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.PortfolioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_add_portfolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/add_experience"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/instruction_add_portfolio"
            android:textColor="@color/gray_500"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_portfolio" />

        <TextView
            android:id="@+id/tv_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/app_name_portfolio"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app">

            <EditText
                android:id="@+id/et_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_input_white"
                android:hint="@string/app_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/description"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_app" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description">

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_input_white"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="5"
                android:minLines="5"
                android:padding="18dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_link_pub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/pub"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_pub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_link_pub">

            <EditText
                android:id="@+id/et_pub_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_input_white"
                android:gravity="top"
                android:hint="@string/link_pub_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_link_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/repo"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_pub" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_link_repo">

            <EditText
                android:id="@+id/et_repo_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_input_white"
                android:gravity="top"
                android:hint="@string/link_repo_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_workplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/workplace"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_repo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_workplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_workplace">

            <EditText
                android:id="@+id/et_work_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_input_white"
                android:gravity="top"
                android:hint="@string/work_place_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="18dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_portfolio_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/portfolio_type"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_workplace" />

        <RadioGroup
            android:id="@+id/rg_portfolio_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_portfolio_type">

            <RadioButton
                android:id="@+id/rb_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mobile_application"
                android:textColor="@color/gray_500" />

            <RadioButton
                android:id="@+id/rb_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/web_application"
                android:textColor="@color/gray_500" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_image_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/image_upload"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_portfolio_type" />

        <ImageButton
            android:id="@+id/ib_choose_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:background="@color/white"
            android:contentDescription="@string/img_icon"
            android:onClick="onClick"
            android:scaleType="center"
            android:elevation="8dp"
            android:src="@drawable/ic_add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_image_upload" />

        <Button
            android:id="@+id/btn_add_skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dark_blue"
            android:onClick="onClick"
            android:padding="14dp"
            android:text="@string/add_portfolio"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_choose_image" />

        <LinearLayout
            android:id="@+id/ln_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:gravity="center|top"
            android:onClick="onClick"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_skill"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/img_icon"
                android:src="@drawable/ic_arrow_left_gray" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/back_to_profile"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>